This documents significant changes in the 93u+m branch of AT&T ksh93.
For full details, see the git log at: https://github.com/ksh93/ksh

Any uppercase BUG_* names are modernish shell bug IDs.

2022-01-26:

- On Cygwin, ksh now executes scripts that do not have a #! path itself,
  like it does on other systems, instead of with /bin/sh.

2022-01-24:

- Fixed a crashing bug in history expansion that could occur when using the "&"
  modifier to repeat a substitution while there was no previous substitution.

- History expansion is now documented in the ksh(1) manual page.

- In history expansion, the history comment character '#' is now enabled by
  default, as it is on bash.

- In history expansion, the 'a' modifier is now a synonym for 'g', as on bash.

- Fixed a bug in history expansion where the 'p' modifier had no effect if
  the 'histverify' option is on.

2022-01-20:

- Disallow out-of-range event numbers in history expansion (-H/-o histexpand).
  Previously these were accepted, resulting in corrupted expansions.

- Fixed a potential crash in history expansion due to a buffer overflow.

2022-01-12:

- Added bash-inspired --histreedit and --histverify options that modify history
  expansion (--histexpand), allowing editing on failure or before execution.

2022-01-04:

- Fixed an issue in vi mode that caused tab completion to fail if the
  last character on the command line was a space.

2021-12-29:

- Fixed numerous build errors that prevented ksh from running on Haiku OS.

- Added support for the SIGKILLTHR signal on operating systems that
  implement it.

2021-12-28:

- Fixed a bug that caused CDPATH to continue working after unsetting it.

- Added three options to the ulimit builtin with the same names and
  functionality as in Bash:
  - 'ulimit -k' sets the maximum number of kqueues.
  - 'ulimit -P' sets the maximum number of pseudo-terminals.
  - 'ulimit -R' sets the maximum time in microseconds a real-time process
    can run before blocking.